[MT-4619] Fix gallery rows wrapping bug

--- a/packages/slate-editor/src/modules/editor-v4-galleries/components/Gallery/Gallery.module.scss
+++ b/packages/slate-editor/src/modules/editor-v4-galleries/components/Gallery/Gallery.module.scss
@@ -6,5 +6,5 @@
     display: flex;
     justify-content: center;
     flex: 1;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
